--- a/README.org
+++ b/README.org
@@ -2,9 +2,8 @@
 
 Common Lisp bindings for bitcoin-core/secp256k1
 
-|---------+-------------------------------------------|
-| source  | git:https://github.com/dvush/cl-secp256k1.git   |
-| commit  | 1fa743a  |
-| systems | cl-secp256k1 |
-|---------+-------------------------------------------|
-
+|---------+-----------------------------------------------|
+| source  | git:https://github.com/dvush/cl-secp256k1.git |
+| commit  | 1fa743a                                       |
+| systems | secp256k1                                     |
+|---------+-----------------------------------------------|
